--- a/Server/package.json
+++ b/Server/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "TooDooServer",
+  "name": "server",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "test" : "mocha"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.0",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "mysql": "^2.13.0",
     "serve-favicon": "~2.3.0"
   }
 }
