--- a/Server/package.json
+++ b/Server/package.json
@@ -10,10 +10,9 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "jade": "~1.11.0",
     "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "pug": "^2.0.0-beta11"
   },
   "devDependencies": {
     "eslint": "^3.14.1",
